# ghostium

./: .env.example  .gclient  .gitignore  Makefile  NOTES.md  README.md  apply_patches.sh  args.gn  bootstrap.sh  build_chromium.sh  build_ghostium.sh  deploy.sh  step1-create-aws-resources.sh  step2-prepare-environment.sh  step3-build-chromium.sh  step4-cleanup-aws-resources.sh  volume.txt
.claude/: settings.local.json
config/: common.args.gn  headless.args.gn  linux-x64.gclient
docs/: aws-setup.md  workflow.md
patches/: 0001-disable-navigator-webdriver.patch  0002-patch-webgl-vendor-renderer.patch  0003-fix-permissions-api-trap.patch  0004-fake-navigator-plugins-mimetypes.patch  0005-fix-mediadevices-labels.patch  0006-fix-error-stack-traces.patch  0007-randomize-devicememory-hardwareconcurrency.patch  0008-jitter-performance-now.patch  0009-webgl-rotate-vendor-renderer.patch  0010-canvas-fingerprint-diversification.patch  0011-randomize-hardware-memory-per-page-load.patch  0012-add-timing-jitter-to-input-events.patch  0013-browser-event-randomization-engine.patch  01-canvas-fingerprinting.patch  05-battery-api.patch  07-chrome-branding.patch  08-timezone-spoofing.patch  09-fonts-enumeration.patch  README.md  audio_context_sample_rate.patch  battery_status_static.patch  canvas_fingerprint_removal.patch  client_hints_disabled.patch  disable-client-hints.patch  media_devices_empty.patch  navigator_properties_spoof.patch  remove-headless.patch  screen_static_resolution.patch  series  set-chrome-branding.patch  set-navigator-concurrency.patch  timezone_force_utc.patch  (+1 more)
(+35 files in other folders)
